class and variable name change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="project-content">
         <h1 class="project-heading">Bookmarks Management System | Javascript Local Storage Project</h1>
-        <div class="user-content">
+        <div class="bookmark-content">
             <div class="body-heading">
                 <h2>All Bookmarks</h2>
                 <div class="body-heading-buttons">
@@ -30,7 +30,7 @@
                         <th>Action</th>
                     </tr>
                     </thead>
-                    <tbody id="userTableBody">
+                    <tbody id="bookmarkTableBody">
                     
                     </tbody>
                 </table>
