added search option

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <h2>All Bookmarks</h2>
                 <div class="body-heading-buttons">
                     <button id="OpenBookmarkAddModal" class="btn">Add</button>
+                    <input id="searchBookMark" type="text" placeholder="Search">
                 </div>                   
             </div>
 
