Fixed bookmark id generation logic.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
                     </tbody>
                 </table>
+                <br>
+                <p style="text-align: center;" > ❤ <a style="text-decoration: none; color: #006000; font-weight: bolder;" target="_blank" href="https://www.insidethediv.com/projects-with-source-code">More Source Code</a></p>
             </div>
         </div>
         <p id="noBookmarkFound">No Bookmark found.</p>
